Drop CUSTOM from biome list